--- a/src/main/resources/templates/updatePassword.html
+++ b/src/main/resources/templates/updatePassword.html
@@ -6,75 +6,11 @@
   <title>Update Password - OpenStreamify</title>
   <link rel="icon" href="/images/favicon.ico" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-        background-color: #1a1d29;
-        color: white;
-        font-family: Arial, sans-serif;
-    }
-
-    .card {
-        background-color: #2a2d3e;
-        border: none;
-        border-radius: 10px;
-    }
-
-    .form-control {
-        background-color: #3b3e52;
-        border: none;
-        color: white;
-    }
-
-    .form-control:focus {
-        background-color: #3b3e52;
-        border-color: #007bff;
-        color: white;
-    }
-
-    .btn-primary {
-        background-color: #007bff;
-        border: none;
-    }
-
-    .btn-primary:hover {
-        background-color: #0056b3;
-    }
-
-    .openstreamyfy-logo {
-        width: 150px;
-        margin-bottom: 20px;
-    }
-
-    .card-header {
-        text-align: center;
-    }
-
-    .card-body {
-        padding: 2rem;
-    }
-
-    .card-footer {
-        text-align: center;
-        padding-top: 0;
-        padding-bottom: 1.5rem;
-    }
-
-    .footer-link {
-        color: #007bff;
-        text-decoration: none;
-    }
-
-    .footer-link:hover {
-        text-decoration: underline;
-    }
-
-    .main-container {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-  </style>
+  <link
+      href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+  <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div class="container main-container">
