--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -33,8 +33,8 @@
                     </a>
                     <ul id="notify" class="dropdown-menu dropdown-menu-end" aria-labelledby="notificationsDropdown">
                        <!-- <li><a class="dropdown-item" href="#">Notificação 1</a></li> -->
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#" th:text="#{notifications}" >See all Notifications</a></li>
+                        <!-- <li><hr class="dropdown-divider"></li> -->
+                        <!--<li><a class="dropdown-item" href="#" th:text="#{notifications}" >See all Notifications</a></li>-->
                     </ul>
                 </li>
                 <!-- User Dropdown Menu -->
