[FIX] Removed dropdown menu and corrected the badge number

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,9 +1,8 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark sticky-top" xmlns:th="http://www.w3.org/1999/xhtml"
-     style="background-color:#2a2d3e;" >
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top" xmlns:th="http://www.w3.org/1999/xhtml" style="background-color:#2a2d3e;">
     <div class="container">
         <a class="navbar-brand" th:href="@{/}">
-            <img  th:src="@{/images/logo.png}" alt="OpenStreamify" style="height: 80px; margin: -12px;">
+            <img th:src="@{/images/logo.png}" alt="OpenStreamify" style="height: 80px; margin: -12px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,26 +25,30 @@
                     <a class="nav-link" href="#" style="font-size:20px" th:text="#{myList}">WatchList</a>
                 </li>
                 <!-- Notifications Dropdown -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="notificationsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" title="3 Notificações">
-                        <i class="bi bi-bell-fill"></i> <!-- Ícone de sino preenchido -->
-                        <span class="badge bg-danger" id="countNot">0</span> <!-- Contagem de notificações -->
+                <li class="nav-item"  id="notifyButton">
+                    <a class="nav-link position-relative" style="font-size:20px;display: inline-block;">
+                        Notificações
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id="countNot">
+                        <span class="visually-hidden">unread messages</span>
+                    </span>
                     </a>
-                    <ul id="notify" class="dropdown-menu dropdown-menu-end" aria-labelledby="notificationsDropdown">
-                       <!-- <li><a class="dropdown-item" href="#">Notificação 1</a></li> -->
+                    <ul id="notify" class="dropdown-menu dropdown-menu-end" aria-labelledby="notificationsDropdown" style=" display: none;">
+                        <!-- <li><a class="dropdown-item" href="#">Notificação 1</a></li> -->
                         <!-- <li><hr class="dropdown-divider"></li> -->
                         <!--<li><a class="dropdown-item" href="#" th:text="#{notifications}" >See all Notifications</a></li>-->
                     </ul>
                 </li>
                 <!-- User Dropdown Menu -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-left: 50px;">
                         <img src="https://via.placeholder.com/30" class="rounded-circle" alt="User Avatar">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                         <li><a class="dropdown-item" href="#" th:text="#{profile}">Profile</a></li>
                         <li><a class="dropdown-item" href="#" th:text="#{settings}">Settings</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" th:href="@{/logout}" th:text="#{logout}">Log out</a></li>
                     </ul>
                 </li>
@@ -58,9 +61,8 @@
 <script>
     // Inicializar tooltip
     var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
-    tooltipTriggerList.forEach(function (tooltipTriggerEl) {
+    tooltipTriggerList.forEach(function(tooltipTriggerEl) {
         new bootstrap.Tooltip(tooltipTriggerEl);
     });
-
 </script>
 </script>
