[FIX] Uploading the segment files directly to minIO by creating temp files on the host machine

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -418,3 +418,9 @@ video {
       margin-top: 11px;
       margin-left: 2px;
 }
+#deleteNots{
+    text-align: center;
+    text-decoration: solid;
+    color: #f33737;
+    font-size: unset;
+}
