[ADD] Retrieve the notifications by the user UUID and fixed the issue that was notificating the user before the succesfull movie upload

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -200,7 +200,7 @@
             success: function (response) {
               // Sucesso no login
               localStorage.setItem("access_token", response.token);
-
+              localStorage.setItem("user",email);
               // Exibe o modal de sucesso
               $("#success-modal").modal();
 
