--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -32,7 +32,7 @@
                         <span class="visually-hidden">unread messages</span>
                     </span>
                     </a>
-                    <ul id="notify" class="dropdown-menu dropdown-menu-end" aria-labelledby="notificationsDropdown" style=" display: none;">
+                    <ul id="notify" class="dropdown-menu dropdown-menu-end" aria-labelledby="notificationsDropdown">
                         <!-- <li><a class="dropdown-item" href="#">Notificação 1</a></li> -->
                         <!-- <li><hr class="dropdown-divider"></li> -->
                         <!--<li><a class="dropdown-item" href="#" th:text="#{notifications}" >See all Notifications</a></li>-->
