[ADD] Telegram notification bot

--- a/src/main/resources/templates/updatePassword.html
+++ b/src/main/resources/templates/updatePassword.html
@@ -19,7 +19,7 @@
       <img th:src="@{/images/logo.png}" alt="Openstreamify Logo" class="openstreamyfy-logo">
       <h4>Update Your Password</h4>
     </div>
-    <div class="card-body">
+    <div class="card-body" style="display:block;">
       <p class="text-center">Please enter your new password below. Make sure it is strong and secure.</p>
       <form id="updatePasswordForm">
         <div class="mb-3">
