[ADD] Admin panel initial config

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -46,6 +46,7 @@
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                         <li><a class="dropdown-item" href="#" th:text="#{profile}">Profile</a></li>
                         <li><a class="dropdown-item" href="#" th:text="#{settings}">Settings</a></li>
+                        <li><a class="dropdown-item"  th:href="@{/admin}">Admin</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
